--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Have fun creating your portfolio on this template!!! -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Your Name</span>
+          Hi, my name is <span class="text-color-main name">Mcauley</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Roblox Scripter.
         </h1>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
@@ -135,10 +135,9 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              Hello, I am Mcauley.
+
+I am a 17 year old Luau Developer with a A-Level in Computer Sciences. I specifically love to code for many reasons it taught me patience, problem solving skills and so much more so I fell in love with it instantly. 
             </p>
             <p class="about-wrapper__info-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
