--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile.png"
+              src="./assets/profilenew.png"
               alt="Profile Image"
               width="450"
               height="350"
