About me Finished

--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@ Have fun creating your portfolio on this template!!! -->
 I am a 17 year old Luau Developer with a A-Level in Computer Sciences. I specifically love to code for many reasons it taught me patience, problem solving skills and so much more so I fell in love with it instantly. 
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              Some time went by since then and I decided to come back to Roblox under the Username: xJen_za where I have been active since 2022 working on my programming skills even more. I have been able to learn offsite programming languages such as HTML, CSS, Python, JavaScript and so much more.
             </p>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
